# csa-ak-4

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  scheme.drawio
.github/workflows/: ci.yaml
app/: __main__.py  binary.py  cli.py  config.py  utils.py
app/cli/: __main__.py  errors.py  helpers.py  trace.py
app/cli/commands/: compile.py  run.py
app/debuger/: debug.py  debug.tcss
app/isa/: consts.py  flag.py  flags.py  instruction.py  opcode.py  state.py
app/simulation/: alu.py  control_unit.py  data_path.py  decoder.py  io.py  memory.py  mux.py  register.py  runner.py  signal.py  simulation.py  stack.py  trigger.py
app/translator/: analyzer.py  ast_repr.py  builtins.py  codegen.py  lexer.py  nodes.py  parser.py  types.py
docs/: IO.md  ISA.md  SIGNALS.md  translator.md
docs/scheme/: scheme.drawio
examples/: echo.cube  example.cube  hello.cube  palindrome.cube  sum.cube
syntax_highlight/: package.json
syntax_highlight/syntaxes/: cube.tmLanguage.json
tests/: analyzer_test.py  codegen_test.py  helpers.py  instruction_test.py  lexer_test.py  parser_test.py  schema.py  shared.py  test_analyzer.py  test_binary.py  test_codegen.py  test_config.py  test_golden.py  test_input_routing.py  test_lexer.py  test_lexer_escapes.py  test_long.py  test_parser.py  test_print.py  test_print_routing.py  test_programs.py  test_runner.py
tests/golden/: cat.yaml  conftest.py  double_precision.yaml  hello.yaml  hello_user_name.yaml  helpers.py  schema.py  sort.yaml  test_golden.py
tests/golden/yaml/: algorithms.yaml  cat.yaml  hello.yaml  hello_user_name.yaml  long_arithmetic.yaml  palindrome.yaml  sort.yaml
tests/opcodes/: test_alu.py  test_control.py  test_dadd.py  test_dword.py  test_interrupts.py  test_memory.py  test_stack.py
tests/yaml/: algorithms.yaml  cat.yaml  hello.yaml  hello_user_name.yaml  interrupt_overrun.yaml  long_arithmetic.yaml  palindrome.yaml  sort.yaml
verilog/: README.md  filelist.f  tb_top.sv
verilog/modules/: alu.sv  ar.sv  isa.sv  pc.sv  ram.sv  stack.sv  top.sv
