[project]
name = "csa-4"
version = "0.1.0"
description = "CSA 4 lab"
authors = [{ name = "lysmux", email = "lysmux <kllraz@yandex.ru>" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"
show-fixes = true
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "PGH",    # pygrep-hooks
    "TRY",    # tryceratops
    "ANN",    # flake8-annotations
    "C4",     # flake8-comprehensions
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "DTZ",    # flake8-datetimez
    "EM",     # flake8-errmsg
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "G",      # flake8-logging-format
    "LOG"     # flake8-logging
]
ignore = [
    "D10"
]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]  # use of `assert`

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true


[tool.coverage.run]
omit = ["tests/*", "/__main__.py", "/.venv/*", "**/site-packages/*"]
branch = true

[tool.coverage.report]
show_missing = true
#skip_covered = true
exclude_also = [
    "def repr",
    "raise NotImplementedError",
    "if name == .main.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]

[tool.pytest.ini_options]
addopts = "--strict-markers --showlocals --verbosity 2"
log_level = "INFO"
pythonpath = ["."]


[tool.pyright]
files = ["src", "tests"]
strict = true
